[package]
edition = "2021"
name = "baml-schema-build"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "deny"
unused_variables = "deny"

[lints.clippy]
too_many_arguments = "allow"
new_without_default = "allow"
arc_with_non_send_sync = "allow"

[dependencies]
reqwest.workspace = true
anyhow.workspace = true
baml-compiler = { path = "../baml-compiler" }
baml-runtime = { path = "../baml-runtime", features = [
  "internal",
], default-features = false }
baml-types = { path = "../baml-lib/baml-types" }
baml-ids.workspace = true
cfg-if.workspace = true
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"] }
futures.workspace = true
getrandom = { version = "0.2.15", features = ["js"] }
indexmap.workspace = true
internal-baml-core.workspace = true
generators-lib = { path = "../generators/utils/generators_lib" }
jsonish = { path = "../baml-lib/jsonish" }
internal-llm-client = { path = "../baml-lib/llm-client" }
js-sys.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.5"
time.workspace = true
tokio = { workspace = true, features = ["sync"] }
url.workspace = true
uuid = { workspace = true, features = ["v4", "js"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-logger = { version = "0.2.0" }
web-sys.workspace = true
web-time.workspace = true
either = "1.8.1"
itertools = "0.13.0"
once_cell.workspace = true
stream-cancel = "0.8"

[dev-dependencies]
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
either = "1.8.1"
wasm-bindgen-test = "0.3.43"
walkdir = "2.5.0"
wasm-logger = "0.2.0"
wasmtimer = "0.4.1"
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }

[features]
default = []
# Use the THIR interpreter runtime instead of the VM bytecode runtime
thir-interpreter = ["baml-runtime/thir-interpreter"]

# [profile.release]
# debug = true
