[package]
name = "boundary-udf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
baml-types.workspace = true
internal-baml-jinja.workspace = true
internal-baml-core.workspace = true # there's Jinja things like get_env there.
minijinja.workspace = true
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
log.workspace = true
indexmap.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
