[package]
edition = "2021"
name = "internal-baml-codegen"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lints.rust]
dead_code = "allow"
elided_named_lifetimes = "deny"
unused_imports = "allow"
unused_variables = "allow"

[dependencies]
anyhow.workspace = true
askama.workspace = true
base64.workspace = true
baml-types.workspace = true
baml-log.workspace = true
cfg-if.workspace = true
indexmap.workspace = true
internal-baml-core.workspace = true
either.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true
pathdiff.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sugar_path.workspace = true
walkdir.workspace = true
semver.workspace = true
colored.workspace = true
itertools.workspace = true
filetime.workspace = true
generators-lib = { path = "../generators/utils/generators_lib" }