[package]
name = "baml-python-ffi"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "BAML python bindings (Cargo.toml)"
license = "Apache-2.0"

[lib]
name = "baml_py"
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_variables = "deny"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-ids.workspace = true
baml-log.workspace = true
baml-runtime = { path = "../baml-runtime", default-features = false, features = [
  "internal",
] }
baml-types.workspace = true
dashmap = "5.5"
internal-baml-core.workspace = true
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
libc = "0.2"
once_cell = "1.19"
jsonish = { path = "../baml-lib/jsonish" }
log.workspace = true
# Consult https://pyo3.rs/main/migration for migration instructions
pyo3 = { version = "0.23.3", default-features = false, features = [
  "abi3-py38",
  "extension-module",
  "generate-import-lib",
  "serde",
  "either",
] }
pyo3-async-runtimes = { version = "0.23", features = [
  "attributes",
  "tokio-runtime",
] }
pythonize = "0.23"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
stream-cancel = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "valuable",
] }
uuid.workspace = true
either.workspace = true
ctrlc = "3.4.5"

[build-dependencies]
pyo3-build-config = "0.21.2"
