[project]
name = "baml-py"
version = "0.211.2"
description = "BAML python bindings (pyproject.toml)"
readme = "README.md"
authors = [{ "name" = "Boundary", "email" = "contact@boundaryml.com" }]
# This is what controls the Python license file, see
# https://github.com/PyO3/maturin/issues/2718 and
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
license = "Apache-2.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python_src"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so).
# The second feature is to fix windows aarch64 https://github.com/samuelcolvin/rtoml/pull/73/files
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]

[project.scripts]
baml-cli = "baml_py:invoke_runtime_cli"
baml = "baml_py:invoke_runtime_cli"

# NOTE: dependencies is _deliberately_ empty so that different flavors of BAML
# don't have to share dependencies, e.g. we currently generate python/pydantic
# but if we generate python/vanilla in the future, we don't want to mess
# with that.
