[package]
name = "baml-client-rust"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Rust language client for BAML runtime"
license-file.workspace = true

[dependencies]
# Core BAML types (for serialization/deserialization)
baml-types = { path = "../baml-lib/baml-types" }
baml_cffi = { path = "../language_client_cffi", package = "baml_cffi" }
prost = "0.14"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
indexmap = "2.0"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# tracing = ["baml-runtime/tracing"]  # Commented out until baml-runtime exposes tracing feature
