[package]
name = "baml-client-rust"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Rust language client for BAML runtime"
license-file.workspace = true

[dependencies]
# Core BAML types (for serialization/deserialization)
baml-types = { path = "../baml-lib/baml-types" }
prost = "0.14"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
indexmap = "2.0"
once_cell = "1.19"
libloading = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[features]
default = []
# tracing = ["baml-runtime/tracing"]  # Commented out until baml-runtime exposes tracing feature
