[package]
edition = "2021"
name = "baml-typescript-ffi"
version.workspace = true

[lib]
name = "baml"
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "allow"
unused_variables = "allow"
deprecated = "allow"

[lints.clippy]
too_many_arguments = "allow"
inherent_to_string = "allow"

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-ids.workspace = true
baml-types.workspace = true
baml-log.workspace = true
baml-runtime = { path = "../baml-runtime", features = ["internal"] }
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
internal-baml-codegen.workspace = true
log.workspace = true
napi = { version = "2", features = [
  "anyhow",
  "async",
  "napi5",
  "serde-json",
  "tokio_rt",
] }
napi-derive = "2"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "valuable",
] }

[build-dependencies]
napi-build = "2.1.3"
