[package]
edition = "2021"
name = "baml-typescript-ffi"
version.workspace = true

[lib]
name = "baml"
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
elided_named_lifetimes = "deny"
unused_imports = "allow"
unused_variables = "allow"
deprecated = "allow"

[lints.clippy]
too_many_arguments = "allow"
inherent_to_string = "allow"

[dependencies]
anyhow.workspace = true
baml-cli.workspace = true
baml-ids.workspace = true
baml-types.workspace = true
baml-log.workspace = true
baml-runtime = { path = "../baml-runtime", features = ["internal"] }
baml-type-builder = { path = "../baml-lib/type-builder" }
dashmap.workspace = true
env_logger.workspace = true
futures.workspace = true
indexmap.workspace = true
internal-baml-core.workspace = true
internal-baml-codegen.workspace = true
log.workspace = true
once_cell.workspace = true
stream-cancel = "0.8"
napi = { version = "3.1.3", features = [
  "anyhow",
  "async",
  "napi5",
  "serde-json",
  "tokio_rt",
] }
napi-derive = "3.1.1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = [
  "json",
  "env-filter",
  "valuable",
] }

[build-dependencies]
napi-build = "2.2.3"
