[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upload-traces"
path = "src/upload-traces-main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.7"
baml-types.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1.40", features = ["valuable"] }
tracing-core = { version = "0.1.33" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
web-time.workspace = true
serde_json.workspace = true
