[package]
name = "tools"
version.workspace = true
edition = "2021"

[[bin]]
name = "language-server-hot-reload"
path = "src/bin/language-server-hot-reload.rs"

[dependencies]
notify-debouncer-full = "0.3"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true