[package]
name = "tools"
version.workspace = true
edition = "2021"

[[bin]]
name = "language-server-hot-reload"
path = "src/bin/language-server-hot-reload.rs"

[dependencies]
anyhow.workspace = true
notify-debouncer-full = "0.3"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true