[package]
name = "zed_baml"
edition = "2024"
version = "0.0.1"
description = "BAML language support for Zed"

[lib]
crate-type = ["cdylib"]

[features]
# This enables the debug mode by default
# default = ["debug"]
# Use this for releases
default = []
debug = []

[dependencies]
zed_extension_api = "0.1.0"
