[project]
name = "python-integ-tests"
version = "0.1.0"
description = ""
authors = [{ name = "None" }]
requires-python = "~=3.8"
readme = "README.md"
dependencies = [
    "assertpy",
    "flask-httpauth>=4.8.0",
    "flask>=3.0.3",
    "maturin",
    "psutil",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "requests",
    "ruff",
]

[dependency-groups]
dev = ["types-assertpy"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*", "baml_client*"]
