[project]
name = "python-integ-tests"
version = "0.1.0"
description = ""
authors = [{ name = "None" }]
requires-python = "~=3.8"
readme = "README.md"
dependencies = [
    "assertpy",
    "flask-httpauth>=4.8.0",
    "flask>=3.0.3",
    "maturin",
    "openai>=1.63.2",
    "psutil",
    "pydantic>=2.10.6",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "requests",
]

[dependency-groups]
dev = ["types-assertpy"]

[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.9.10",
]

[tool.setuptools.packages.find]
include = ["app*", "baml_client*"]
