[project]
name = "python-integ-tests"
version = "0.1.0"
description = ""
authors = [{ name = "None" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "flask-httpauth>=4.8.0",
    "flask>=3.0.3",
    "maturin",
    "openai>=1.93.0",
    "psutil",
    "pydantic>=2.10.6",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "requests",
    "ruff",
    "anthropic (>=0.49.0,<0.50.0)",
    "google-genai (>=1.5.0,<2.0.0)",
    "boto3>=1.37.37",
    "pip>=25.1.1",
    "pyhamcrest>=2.1.0",
    "assertpy>=1.1",
]

[dependency-groups]
dev = ["types-assertpy"]

[tool.uv]
package = true
dev-dependencies = ["ruff>=0.9.10"]

[tool.setuptools.packages.find]
include = ["app*", "baml_client*"]
